fixed alignment issues

--- a/public/stylesheets/scrolling-nav.css
+++ b/public/stylesheets/scrolling-nav.css
@@ -16,7 +16,7 @@ h1,h4 { font-weight: 700; margin-bottom: 10px;}
 h2,h3 { font-weight: 300; color: #22A39F; }
 h1 { font-size: 100px; }
 h2 { font-size: 54px; text-align: center;}
-h3 { font-size: 28px; text-align: left}
+h3 { font-size: 28px;}
 h1,h6 {color:#fbfbff;}
 h5 {font-size: 54px; color:#fbfbff;}
 h6 {font-size: 30px;}
@@ -32,6 +32,7 @@ ul.no-bullets li { text-align:left; padding: 3px; }
 p.lead { text-align: center; color: #727878; }
 p.lead a { color: #FFFFFF; text-decoration: underline; }
 p.lead a:hover { text-decoration: none; }
+p.center {text-align: center;}
 ul.no-bullets { list-style-type: none; margin: 0px; padding: 0px; }
 hr { margin: 40px 0px; border-color: #727878; opacity: 0.2; filter:alpha(opacity=20); }
 
